bump width to fix menu overflow issue on Linux and Firefox 4. CLK-746
git-svn-id: https://svn.apache.org/repos/asf/click/trunk/click@1061559 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/webapp/assets/css/style.css
+++ b/examples/webapp/assets/css/style.css
@@ -43,7 +43,7 @@ div.page {
   margin: 0 auto; /* Center align for other browsers,  */
   text-align: left;
 	background: #ffffff;
-	width: 990px;
+	width: 1010px;
   min-height: 100%; /* IE6 doesn't recognize min-height. */
 }
 
